train with hedi and kowsi files

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,15 +70,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/train.record\n",
-      "Successfully created the TFRecord file: Tensorflow/workspace/annotations/test.record\n"
+      "C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\google\\auth\\__init__.py:55: Python37DeprecationWarning: After January 1, 2024, new releases of this library will drop support for Python 3.7. More details about Python 3.7 support can be found at https://cloud.google.com/python/docs/python37-sunset/\n",
+      "  warnings.warn(message, Python37DeprecationWarning)\n",
+      "C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\google\\oauth2\\__init__.py:40: Python37DeprecationWarning: After January 1, 2024, new releases of this library will drop support for Python 3.7. More details about Python 3.7 support can be found at https://cloud.google.com/python/docs/python37-sunset/\n",
+      "  warnings.warn(message, Python37DeprecationWarning)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"Tensorflow/scripts/generate_tfrecord.py\", line 27, in <module>\n",
+      "    import tensorflow.compat.v1 as tf\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\__init__.py\", line 51, in <module>\n",
+      "    from ._api.v2 import compat\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\__init__.py\", line 37, in <module>\n",
+      "    from . import v1\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v1\\__init__.py\", line 30, in <module>\n",
+      "    from . import compat\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v1\\compat\\__init__.py\", line 38, in <module>\n",
+      "    from . import v2\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v1\\compat\\v2\\__init__.py\", line 28, in <module>\n",
+      "    from tensorflow._api.v2.compat.v2 import __internal__\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\__init__.py\", line 33, in <module>\n",
+      "    from . import compat\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\compat\\__init__.py\", line 38, in <module>\n",
+      "    from . import v2\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\compat\\v2\\__init__.py\", line 37, in <module>\n",
+      "    from tensorflow._api.v2.compat.v2 import distribute\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\distribute\\__init__.py\", line 182, in <module>\n",
+      "    from . import experimental\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\distribute\\experimental\\__init__.py\", line 10, in <module>\n",
+      "    from . import rpc\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\distribute\\experimental\\rpc\\__init__.py\", line 8, in <module>\n",
+      "    from tensorflow.python.distribute.experimental.rpc.rpc_ops import Client\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\python\\distribute\\experimental\\__init__.py\", line 22, in <module>\n",
+      "    from tensorflow.python.distribute.failure_handling import failure_handling\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\python\\distribute\\failure_handling\\failure_handling.py\", line 33, in <module>\n",
+      "    from tensorflow.python.distribute.failure_handling import gce_util\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\python\\distribute\\failure_handling\\gce_util.py\", line 20, in <module>\n",
+      "    import requests\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\requests\\__init__.py\", line 43, in <module>\n",
+      "    import urllib3\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\urllib3\\__init__.py\", line 42, in <module>\n",
+      "    \"urllib3 v2.0 only supports OpenSSL 1.1.1+, currently \"\n",
+      "ImportError: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'OpenSSL 1.1.0i  14 Aug 2018'. See: https://github.com/urllib3/urllib3/issues/2168\n",
+      "C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\google\\auth\\__init__.py:55: Python37DeprecationWarning: After January 1, 2024, new releases of this library will drop support for Python 3.7. More details about Python 3.7 support can be found at https://cloud.google.com/python/docs/python37-sunset/\n",
+      "  warnings.warn(message, Python37DeprecationWarning)\n",
+      "C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\google\\oauth2\\__init__.py:40: Python37DeprecationWarning: After January 1, 2024, new releases of this library will drop support for Python 3.7. More details about Python 3.7 support can be found at https://cloud.google.com/python/docs/python37-sunset/\n",
+      "  warnings.warn(message, Python37DeprecationWarning)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"Tensorflow/scripts/generate_tfrecord.py\", line 27, in <module>\n",
+      "    import tensorflow.compat.v1 as tf\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\__init__.py\", line 51, in <module>\n",
+      "    from ._api.v2 import compat\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\__init__.py\", line 37, in <module>\n",
+      "    from . import v1\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v1\\__init__.py\", line 30, in <module>\n",
+      "    from . import compat\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v1\\compat\\__init__.py\", line 38, in <module>\n",
+      "    from . import v2\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v1\\compat\\v2\\__init__.py\", line 28, in <module>\n",
+      "    from tensorflow._api.v2.compat.v2 import __internal__\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\__init__.py\", line 33, in <module>\n",
+      "    from . import compat\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\compat\\__init__.py\", line 38, in <module>\n",
+      "    from . import v2\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\compat\\v2\\__init__.py\", line 37, in <module>\n",
+      "    from tensorflow._api.v2.compat.v2 import distribute\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\distribute\\__init__.py\", line 182, in <module>\n",
+      "    from . import experimental\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\distribute\\experimental\\__init__.py\", line 10, in <module>\n",
+      "    from . import rpc\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\_api\\v2\\compat\\v2\\distribute\\experimental\\rpc\\__init__.py\", line 8, in <module>\n",
+      "    from tensorflow.python.distribute.experimental.rpc.rpc_ops import Client\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\python\\distribute\\experimental\\__init__.py\", line 22, in <module>\n",
+      "    from tensorflow.python.distribute.failure_handling import failure_handling\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\python\\distribute\\failure_handling\\failure_handling.py\", line 33, in <module>\n",
+      "    from tensorflow.python.distribute.failure_handling import gce_util\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\python\\distribute\\failure_handling\\gce_util.py\", line 20, in <module>\n",
+      "    import requests\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\requests\\__init__.py\", line 43, in <module>\n",
+      "    import urllib3\n",
+      "  File \"C:\\Users\\Kowsigan\\anaconda3\\envs\\tf\\lib\\site-packages\\urllib3\\__init__.py\", line 42, in <module>\n",
+      "    \"urllib3 v2.0 only supports OpenSSL 1.1.1+, currently \"\n",
+      "ImportError: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'OpenSSL 1.1.0i  14 Aug 2018'. See: https://github.com/urllib3/urllib3/issues/2168\n"
      ]
     }
    ],
@@ -96,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,20 +182,7 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'models'...\n",
-      "Updating files:  41% (1527/3659)\n",
-      "Updating files:  42% (1537/3659)\n",
-      "Updating files:  43% (1574/3659)\n",
-      "Updating files:  44% (1610/3659)\n",
-      "Updating files:  45% (1647/3659)\n",
-      "Updating files:  46% (1684/3659)\n",
-      "Updating files:  47% (1720/3659)\n",
-      "Updating files:  48% (1757/3659)\n",
-      "Updating files:  49% (1793/3659)\n",
-      "Updating files:  50% (1830/3659)\n",
-      "Updating files:  51% (1867/3659)\n",
-      "Updating files:  52% (1903/3659)\n",
-      "Updating files:  53% (1940/3659)\n",
-      "Updating files:  54% (1976/3659)\n",
+      "Updating files:  54% (1987/3659)\n",
       "Updating files:  55% (2013/3659)\n",
       "Updating files:  56% (2050/3659)\n",
       "Updating files:  57% (2086/3659)\n",
@@ -146,7 +211,6 @@
       "Updating files:  80% (2928/3659)\n",
       "Updating files:  81% (2964/3659)\n",
       "Updating files:  82% (3001/3659)\n",
-      "Updating files:  82% (3004/3659)\n",
       "Updating files:  83% (3037/3659)\n",
       "Updating files:  84% (3074/3659)\n",
       "Updating files:  85% (3111/3659)\n",
@@ -193,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -266,7 +330,7 @@
      "data": {
       "text/plain": [
        "{'model': ssd {\n",
-       "   num_classes: 2\n",
+       "   num_classes: 5\n",
        "   image_resizer {\n",
        "     fixed_shape_resizer {\n",
        "       height: 320\n",
@@ -280,20 +344,20 @@
        "     conv_hyperparams {\n",
        "       regularizer {\n",
        "         l2_regularizer {\n",
-       "           weight: 4e-05\n",
+       "           weight: 3.9999998989515007e-05\n",
        "         }\n",
        "       }\n",
        "       initializer {\n",
        "         random_normal_initializer {\n",
        "           mean: 0.0\n",
-       "           stddev: 0.01\n",
+       "           stddev: 0.009999999776482582\n",
        "         }\n",
        "       }\n",
        "       activation: RELU_6\n",
        "       batch_norm {\n",
-       "         decay: 0.997\n",
+       "         decay: 0.996999979019165\n",
        "         scale: true\n",
-       "         epsilon: 0.001\n",
+       "         epsilon: 0.0010000000474974513\n",
        "       }\n",
        "     }\n",
        "     use_depthwise: true\n",
@@ -331,26 +395,26 @@
        "       conv_hyperparams {\n",
        "         regularizer {\n",
        "           l2_regularizer {\n",
-       "             weight: 4e-05\n",
+       "             weight: 3.9999998989515007e-05\n",
        "           }\n",
        "         }\n",
        "         initializer {\n",
        "           random_normal_initializer {\n",
        "             mean: 0.0\n",
-       "             stddev: 0.01\n",
+       "             stddev: 0.009999999776482582\n",
        "           }\n",
        "         }\n",
        "         activation: RELU_6\n",
        "         batch_norm {\n",
-       "           decay: 0.997\n",
+       "           decay: 0.996999979019165\n",
        "           scale: true\n",
-       "           epsilon: 0.001\n",
+       "           epsilon: 0.0010000000474974513\n",
        "         }\n",
        "       }\n",
        "       depth: 128\n",
        "       num_layers_before_predictor: 4\n",
        "       kernel_size: 3\n",
-       "       class_prediction_bias_init: -4.6\n",
+       "       class_prediction_bias_init: -4.599999904632568\n",
        "       share_prediction_tower: true\n",
        "       use_depthwise: true\n",
        "     }\n",
@@ -368,8 +432,8 @@
        "   }\n",
        "   post_processing {\n",
        "     batch_non_max_suppression {\n",
-       "       score_threshold: 1e-08\n",
-       "       iou_threshold: 0.6\n",
+       "       score_threshold: 9.99999993922529e-09\n",
+       "       iou_threshold: 0.6000000238418579\n",
        "       max_detections_per_class: 100\n",
        "       max_total_detections: 100\n",
        "       use_static_shapes: false\n",
@@ -395,7 +459,8 @@
        "   normalize_loc_loss_by_codesize: true\n",
        "   inplace_batchnorm_update: true\n",
        "   freeze_batchnorm: false\n",
-       " }, 'train_config': batch_size: 4\n",
+       " },\n",
+       " 'train_config': batch_size: 4\n",
        " data_augmentation_options {\n",
        "   random_horizontal_flip {\n",
        "   }\n",
@@ -415,13 +480,13 @@
        "   momentum_optimizer {\n",
        "     learning_rate {\n",
        "       cosine_decay_learning_rate {\n",
-       "         learning_rate_base: 0.08\n",
+       "         learning_rate_base: 0.07999999821186066\n",
        "         total_steps: 50000\n",
-       "         warmup_learning_rate: 0.026666\n",
+       "         warmup_learning_rate: 0.026666000485420227\n",
        "         warmup_steps: 1000\n",
        "       }\n",
        "     }\n",
-       "     momentum_optimizer_value: 0.9\n",
+       "     momentum_optimizer_value: 0.8999999761581421\n",
        "   }\n",
        "   use_moving_average: false\n",
        " }\n",
@@ -432,17 +497,21 @@
        " max_number_of_boxes: 100\n",
        " unpad_groundtruth_tensors: false\n",
        " fine_tune_checkpoint_type: \"detection\"\n",
-       " fine_tune_checkpoint_version: V2, 'train_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " fine_tune_checkpoint_version: V2,\n",
+       " 'train_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
        " tf_record_input_reader {\n",
        "   input_path: \"Tensorflow/workspace/annotations/train.record\"\n",
-       " }, 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
-       " use_moving_averages: false, 'eval_input_configs': [label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " },\n",
+       " 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
+       " use_moving_averages: false,\n",
+       " 'eval_input_configs': [label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
        " shuffle: false\n",
        " num_epochs: 1\n",
        " tf_record_input_reader {\n",
        "   input_path: \"Tensorflow/workspace/annotations/test.record\"\n",
        " }\n",
-       " ], 'eval_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " ],\n",
+       " 'eval_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
        " shuffle: false\n",
        " num_epochs: 1\n",
        " tf_record_input_reader {\n",
@@ -450,7 +519,7 @@
        " }}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,19 +576,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python Tensorflow/models/research/object_detection/model_main_tf2.py --model_dir=Tensorflow/workspace/models/my_ssd_mobnet --pipeline_config_path=Tensorflow/workspace/models/my_ssd_mobnet/pipeline.config --num_train_steps=10000\n"
+      "python Tensorflow/models/research/object_detection/model_main_tf2.py --model_dir=Tensorflow/workspace/models/my_ssd_mobnet --pipeline_config_path=Tensorflow/workspace/models/my_ssd_mobnet/pipeline.config --num_train_steps=20000\n"
      ]
     }
    ],
    "source": [
-    "print(\"\"\"python {}/research/object_detection/model_main_tf2.py --model_dir={}/{} --pipeline_config_path={}/{}/pipeline.config --num_train_steps=10000\"\"\".format(APIMODEL_PATH, MODEL_PATH,CUSTOM_MODEL_NAME,MODEL_PATH,CUSTOM_MODEL_NAME))"
+    "print(\"\"\"python {}/research/object_detection/model_main_tf2.py --model_dir={}/{} --pipeline_config_path={}/{}/pipeline.config --num_train_steps=20000\"\"\".format(APIMODEL_PATH, MODEL_PATH,CUSTOM_MODEL_NAME,MODEL_PATH,CUSTOM_MODEL_NAME))"
    ]
   },
   {
@@ -713,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
