--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -649,7 +649,23 @@
     "import os\n",
     "from object_detection.utils import label_map_util\n",
     "from object_detection.utils import visualization_utils as viz_utils\n",
-    "from object_detection.builders import model_builder"
+    "from object_detection.builders import model_builder\n",
+    "import tensorflow as tf\n",
+    "from object_detection.utils import config_util\n",
+    "from object_detection.protos import pipeline_pb2\n",
+    "from google.protobuf import text_format\n",
+    "WORKSPACE_PATH = 'Tensorflow/workspace'\n",
+    "SCRIPTS_PATH = 'Tensorflow/scripts'\n",
+    "APIMODEL_PATH = 'Tensorflow/models'\n",
+    "ANNOTATION_PATH = WORKSPACE_PATH+'/annotations'\n",
+    "IMAGE_PATH = WORKSPACE_PATH+'/images'\n",
+    "MODEL_PATH = WORKSPACE_PATH+'/models'\n",
+    "PRETRAINED_MODEL_PATH = WORKSPACE_PATH+'/pre-trained-models'\n",
+    "CONFIG_PATH = MODEL_PATH+'/my_ssd_mobnet/pipeline.config'\n",
+    "CHECKPOINT_PATH = MODEL_PATH+'/my_ssd_mobnet/'\n",
+    "CUSTOM_MODEL_NAME = 'my_ssd_mobnet' \n",
+    "CONFIG_PATH = MODEL_PATH+'/'+CUSTOM_MODEL_NAME+'/pipeline.config'\n",
+    "config = config_util.get_configs_from_pipeline_file(CONFIG_PATH)"
    ]
   },
   {
